; ModuleID = '/home/carl/AnghaBench/linux/drivers/ide/extr_ide-cd.c_msf_from_bcd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ide/extr_ide-cd.c_msf_from_bcd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atapi_msf = type { i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atapi_msf*)* @msf_from_bcd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msf_from_bcd(%struct.atapi_msf* %0) #0 {
  %2 = alloca %struct.atapi_msf*, align 8
  store %struct.atapi_msf* %0, %struct.atapi_msf** %2, align 8
  %3 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %4 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %3, i32 0, i32 2
  %5 = load i8*, i8** %4, align 8
  %6 = call i8* @bcd2bin(i8* %5)
  %7 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %8 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %7, i32 0, i32 2
  store i8* %6, i8** %8, align 8
  %9 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %10 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %9, i32 0, i32 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i8* @bcd2bin(i8* %11)
  %13 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %14 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %13, i32 0, i32 1
  store i8* %12, i8** %14, align 8
  %15 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %16 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = call i8* @bcd2bin(i8* %17)
  %19 = load %struct.atapi_msf*, %struct.atapi_msf** %2, align 8
  %20 = getelementptr inbounds %struct.atapi_msf, %struct.atapi_msf* %19, i32 0, i32 0
  store i8* %18, i8** %20, align 8
  ret void
}

declare dso_local i8* @bcd2bin(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
